# Bili-ticket-get

./: .flake8  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  config.example.json  main.py  pyproject.toml
.github/workflows/: python-app.yml
app/: __init__.py  config.py  grabber.py  notify.py  server.py
app/bili/: __init__.py  auth.py  captcha.py  client.py  errors.py  risk.py  ticket.py
docs/: 使用说明.md  获取Cookie.md
tests/: test_regressions.py
web/: app.js  index.html  style.css
